# codemigrator-ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  config.py  main.py  pyproject.toml
apps/api/agents/: architect.py  documenter.py  migrator.py  orchestrator.py  reader.py  tester.py
apps/api/llm/: __init__.py  nemotron.py  prompts.py  streaming.py
apps/api/models/: outputs.py  state.py
apps/api/parsers/: cobol.py
apps/api/routes/: health.py  migrate.py
apps/api/tests/: conftest.py  test_cobol_parser.py  test_models.py  test_nemotron.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AgentTimeline.tsx  CodeDiff.tsx  FileUpload.tsx  MetricsCard.tsx  NemotronBadge.tsx  ReportPanel.tsx
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEMO.md
examples/cobol-banking/: ACCOUNT.cbl  INTEREST.cbl  TRANSACT.cbl
